--- a/css/reg.css
+++ b/css/reg.css
@@ -19,18 +19,19 @@
     height: .20rem;
 }
 .header h1{
-	flex: 9;
+	flex: 8;
     text-align: center;
     font-size: .18rem;
     line-height: .44rem;
     color: #333;
     font-weight: 400;
 }
-.h_sick{
+.h_sick span{
 	flex: 1;
 	font-size: .2rem;
     display: block;
     height: 100%;
+    margin-right: .14rem;
 }
 .center{
 	padding-top: .28rem;
